tests/snapshots/grafana__firing_batch_yields_one_alert_per_entry.snap
---
source: tests/grafana.rs
expression: alerts
---
- source: grafana
  source_alert_id: c4f3a2b1d8e90f67
  labels:
    alertname: HighErrorRate
    grafana_folder: Production
    service: checkout
    severity: critical
  annotations:
    summary: 5xx rate above 2% on checkout
  starts_at: "2026-07-12T09:03:00Z"
  status: firing
  raw_payload: "[raw]"
- source: grafana
  source_alert_id: 9e2a4c6b8d0f1e35
  labels:
    alertname: HighErrorRate
    grafana_folder: Production
    service: payments
    severity: critical
  annotations:
    summary: 5xx rate above 2% on payments
  starts_at: "2026-07-12T09:04:30Z"
  status: firing
  raw_payload: "[raw]"
