tests/snapshots/grafana__resolved_normalizes_with_resolved_status.snap
---
source: tests/grafana.rs
expression: alerts
---
- source: grafana
  source_alert_id: c4f3a2b1d8e90f67
  labels:
    alertname: HighErrorRate
    grafana_folder: Production
    service: checkout
    severity: critical
  annotations:
    summary: 5xx rate above 2% on checkout
  starts_at: "2026-07-12T09:03:00Z"
  status: resolved
  raw_payload: "[raw]"
